📝  Add Week 7 Example

--- a/instructor_materials/IDM232-W01.md
+++ b/instructor_materials/IDM232-W01.md
@@ -16,7 +16,7 @@ theme: Titillium, 1
 ---
 ## Hello
 
-I am Phil Sinatra, professor in the Interactive Digital Media program.
+I am Phil Sinatra, instructor in the Interactive Digital Media program.
 
 You can find me at:
 
@@ -41,7 +41,7 @@ You can find me at:
 - Designed for use with HTML
 - Provides more flexibility than HTML alone
 
-^ We're going to start out by talking about what is PHP? PHP is a server side scripting language. When we say _server side_, and its opposite _client side_, we're talking about where the code does the work. When the code runs on a web server, it is server side; when the code runs on the user's computer, it is client side. JavaScript is a popular client side scripting language.
+^ We're going to start out by talking about what is PHP? (_click_) PHP is a server side scripting language. When we say _server side_, and its opposite _client side_, we're talking about where the code does the work. When the code runs on a web server, it is server side; when the code runs on the user's computer, it is client side. JavaScript is a popular client side scripting language.
 
 ^ (click) PHP is not a compiled language, it can not run on its own. We'll need to have a running web server in order to use PHP. PHP code is executed by the web server exactly as it's written. (click) PHP is designed for use with HTML and can be embedded in our HTML.
 
@@ -73,7 +73,7 @@ You can find me at:
 
 ^ There are many reasons to use PHP over other web technologies. (click) PHP is open source and free software. Open source means the source code is available for everyone to study, use or modify. (click) PHP is cross platform, which means it can be put on a Windows, Mac or Linux server and run the same code with no problems or differences. (click) Just because it's open source and free, it doesn't mean it's inferior or not powerful.
 
-^ (click) PHP functions are designed for we usage. (click) It is also fully object oriented since version five. This includes some advanced features you can take advantage of as your skills continue to progress. (click) Php has great documentation in many languages. If you go to php.net you'll see this.
+^ (click) PHP functions are designed for web usage. (click) It is also fully object oriented since version five. This includes some advanced features you can take advantage of as your skills continue to progress. (click) PHP has great documentation in many languages. If you go to php.net you'll see this.
 
 ---
 
@@ -215,13 +215,17 @@ $$ XAMP = (L|M|W)+Apache+MySQL+PHP $$
 - must serve files from a web server
 - must use `<?php` and `?>` tags around all PHP code
 
-^ When you access the PHP module within your document, you have to use the .php file extension for your file. If you put PHP code in a .html document, the browser will not render the PHP or execute its functions.
+^ When you access the PHP module within your document, (_click_) you have to use the .php file extension for your file. If you put PHP code in a .html document, the browser will not render the PHP or execute its functions.
+
+^ (_click_) Your files must be on a web server. You can not open your finder and double click a PHP document and expect it to work.
+
+^ (_click_) All PHP code must be wrapped in PHP tags.
 
 ---
 
-## Outputting Dynamic Text
+![inline](http://digm.drexel.edu/crs/IDM232/presentations/images/amazon.png)
 
-^ One of the most powerful aspects of PHP is it's ability to output dynamic text. PHP can grab content from a database and display it so that and HTML page can show different users different content, (think Amazon). We're going to start looking a how we can output dynamic text first by simply outputting a few words. Fromt here, we'll be able to pull things from the database and build more elaborate stuff.
+^ One of the most powerful aspects of PHP is it's ability to output dynamic text. PHP can grab content from a database and display it so that and HTML page can show different users different content, (think Amazon). We're going to start looking a how we can output dynamic text first by simply outputting a few words. From here, we'll be able to pull things from the database and build more elaborate stuff.
 
 ---
 
@@ -317,6 +321,15 @@ $$ XAMP = (L|M|W)+Apache+MySQL+PHP $$
 
 ## Code Comments
 
+```php
+// Hello PHP
+echo "Hello";
+/* I'm so excited for IDM232.
+   I love Scripting so much. */
+echo "Sure you do";
+# Insert more information.
+```
+
 ^ Just like in HTML and CSS, PHP allows us to write code comments. To be a good developer, it is important to learn about code comments in all programming languages. You want to add comments to your code so that you or someone else coming to look at the code later. Can quickly understand what your code is trying to accomplish, and understand the approach that you took. Comments take additional time to write, but they pay off and save you time later. In PHP, there are a couple of ways we can write comments.
 
 ---
@@ -358,6 +371,8 @@ $$ XAMP = (L|M|W)+Apache+MySQL+PHP $$
 ?>
 ```
 
+^ For comments that span multiple lines, use a slash star format, similar to CSS.
+
 ---
 
 ### [docBlockr](https://packagecontrol.io/packages/DocBlockr)
@@ -396,7 +411,7 @@ function hello_world() {
 ?>
 ```
 
-^ Comments are super important to writing good code. They can be hard to be disciplined about it. You get caught up in writing the code, and often you forget to leave yourself comments. But once you start programming a lot you'll realize that comments are going to save you a lot of time, not now, but 10 weeks from now. When you come back to the code. You can't remember what you were trying to do or why you chose a certain approach. It's one of those things where investing a little bit of time in the beginning is going to save you lots of time later on. And comments are especially friendly if there's ever someone else who's going to be working with your code, because they don't know what you were thinking. They don't know The reasoning that you went through to arrive at a solution to a certain problem, but your comments can make it clear to them.
+^ Comments are super important to writing good code. They can be hard to be disciplined about it. You get caught up in writing the code, and often you forget to leave yourself comments. But once you start programming a lot you'll realize that comments are going to save you a lot of time, not now, but 10 weeks from now. When you come back to the code. You can't remember what you were trying to do or why you chose a certain approach. It's one of those things where investing a little bit of time in the beginning is going to save you lots of time later on. And comments are especially friendly if there's ever someone else who's going to be working with your code, because they don't know what you were thinking. They don't know the reasoning that you went through to arrive at a solution to a certain problem, but your comments can make it clear to them.
 
 ---
 
