--- a/instructor_materials/IDM232-W02.md
+++ b/instructor_materials/IDM232-W02.md
@@ -13,9 +13,10 @@ theme: Titillium, 1
 
 ---
 
-## Variables
+![150%](http://digm.drexel.edu/crs/IDM232/presentations/images/php-html-code.jpg)
 
-^ Our exploration in the PHP programming language is going to begin with an exploration of the different structures or types that we can use while writing PHP. And the first of those that we're going to look at are variables. Now, if you've done programming before, then you're familiar with what a variable is. But if you haven't, then let me start by explaining that a variable is a symbolic representation of a value. You can think of it as a symbol that refers to something and that's going to make a lot more sense once we actually start using them. But as it's name suggests, it can change over time or vary. It has a variable value because it can point to different values. Now, in PHP, there's some rules about the kinds of names that we can give to variables.
+
+^ Our exploration in the PHP programming language is going to begin with an exploration of the different structures or types that we can use while writing PHP. And the first of those that we're going to look at are variables. You're all familiar with variables from other programming. A variable is a symbolic representation of a value. You can think of it as a symbol that refers to something and that's going to make a lot more sense once we actually start using them. But as it's name suggests, it can change over time or vary. It has a variable value because it can point to different values. Now, in PHP, there's some rules about the kinds of names that we can give to variables.
 
 ---
 
@@ -27,7 +28,7 @@ theme: Titillium, 1
 - No spaces
 - Case-sensitive
 
-^ They need to start with a dollar sign, that needs to be followed by either letter or an underscore, they can contain letters, numbers, underscores or dashes. They cannot contain any spaces and they are case sensitive. It makes a difference whether we use an upper case letter or a lowercase letter.
+^ (_click_) They need to start with a dollar sign, that needs to be (_click_) followed by either letter or an underscore, they can (_click_) contain letters, numbers, underscores or dashes. They (_click_) cannot contain any spaces and they (_click_) are case sensitive. It makes a difference whether we use an upper case letter or a lowercase letter.
 
 ---
 
@@ -91,11 +92,11 @@ Avoid:
 - multiple underscores (`$__bookPage`)
 - leading underscore (`$_book`)
 
-^ The first one is I think we should not use the hyphenated version of this, and the main reason why is that, that hyphen looks like a minus sign, and it looks like we're subtracting this minus variable. And when we start working with variables and we start working with addition and subtraction, that could be confusing for us. So let's avoid confusion and stay away from that.
+^ The first one is I think we should not use the (_click_) hyphenated version of this, and the main reason why is that, that hyphen looks like a minus sign, and it looks like we're subtracting this minus variable. And when we start working with variables and we start working with addition and subtraction, that could be confusing for us. So let's avoid confusion and stay away from that.
 
-^ The second one is this multiple underscores. Stay away from that as well, because it makes it hard to tell whether you've got one or two underscores. I once worked on a project where another programmer had written their variable names using underscores. And sometimes they had one underscore, sometimes they had two, sometimes they had three, and it had significance to them. There was a reason why they were using one, two, or three, but it was really kind of lost on me as to what the meaning was behind these, and it was hard to read to tell whether it was one or two or three.
+^ (_click_) The second one is this multiple underscores. Stay away from that as well, because it makes it hard to tell whether you've got one or two underscores. I once worked on a project where another programmer had written their variable names using underscores. And sometimes they had one underscore, sometimes they had two, sometimes they had three, and it had significance to them. There was a reason why they were using one, two, or three, but it was really kind of lost on me as to what the meaning was behind these, and it was hard to read to tell whether it was one or two or three.
 
-^ The last one is not quite as evil, but I want to steer you away from it and that is this single underscore at the beginning. The reason it's not evil is that PHP is going to use it itself. And we're going to see that. We're going to see that PHP has some special variables. They're named with this underscore at the beginning, and some developers use this underscore for special cases. They want to denote the fact that a variable has certain access privileges, that certain people can or can't access things by putting that underscore in front of it. Because it has this special meaning both to PHP and to other developers. Let's stay away from it for general use.
+^ (_click_) The last one is not quite as evil, but I want to steer you away from it and that is this single underscore at the beginning. The reason it's not evil is that PHP is going to use it itself. And we're going to see that. We're going to see that PHP has some special variables. They're named with this underscore at the beginning, and some developers use this underscore for special cases. They want to denote the fact that a variable has certain access privileges, that certain people can or can't access things by putting that underscore in front of it. Because it has this special meaning both to PHP and to other developers. Let's stay away from it for general use.
 
 ---
 
@@ -832,7 +833,7 @@ $email_addresses = [
 ?>
 ```
 
-^ Here I put _first name_ as a label, that's a string, an object, it's object-indexed. And I point that using an equal sign and the greater than sign, so it looks like an arrow pointing to the next data, which is the value. So the key is _first name_ and the value is _Delores_. And we can have more than one, key/value pairing.
+^ Here I put _first name_ as a label, that's a string, an object, it's object-indexed. And I point that using an equal sign and the greater than sign, so it looks like an arrow pointing to the next data, which is the value. So the key is _first name_ and the value is _Dolores_. And we can have more than one, key/value pairing.
 
 ---
 
