--- a/instructor_materials/IDM232-W02.md
+++ b/instructor_materials/IDM232-W02.md
@@ -2,7 +2,7 @@ build-lists: true
 footer: IDM 232: Scripting for IDM II
 slidenumbers: true
 autoscale: true
-theme: Titillium, 1
+theme: Plain Jane, 2
 
 # IDM 232
 ## Scripting for<br>Interactive Digital Media II
